Added pricing and sign-up pages.

--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,11 @@ header {
 	background-color: grey;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
 @media only screen and (min-width: 29em) {
 
   .widthb {
