Added thank you and pricing page.

--- a/css/main.css
+++ b/css/main.css
@@ -25,11 +25,11 @@ header {
 }
 
 .tour {
-  background-color: #dbd5d5
+  background-color: #cccccc
 }
 
 .price {
-  background-color: #f2f2f2;
+  background-color: #ffffff;
 }
 
 .nav {
