--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,8 @@ header {
 }
 
 .prefooter {
-  background-color: #deb9b4;
+  border-top: 5px solid black;
+  background-color: #d6c7bf;
 }
 
 .footer {
@@ -78,6 +79,10 @@ button {
   color: white;
 }
 
+button:hover {
+  background-color: #510101;
+}
+
 label {
   display: block;
 }
@@ -112,6 +117,14 @@ footer {
 
   .widths span {
     display: inline-block;
+  }
+
+  .caption {
+    padding: 0;
+  }
+
+  p {
+    padding: 5em;
   }
 
 }
