--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,11 @@ header {
   background-color: #cccccc;
 }
 
+.ltgrey {
+  background-color: #efefef;
+}
+
 .prefooter {
-  border-top: 5px solid black;
   background-color: #d6c7bf;
 }
 
@@ -91,10 +94,23 @@ footer {
   background: #deb9b4;
 }
 
+.svg {
+  width: 12%;
+  height: auto;
+}
+
+.svgbig {
+  width: 10%;
+  height: auto;
+}
 @media only screen and (min-width: 29em) {
 
   .widthb {
     width: 20em;
+  }
+
+  .svg {
+    width: 7%;
   }
 
 }
@@ -124,7 +140,7 @@ footer {
   }
 
   p {
-    padding: 5em;
+    padding: 0 5em;
   }
 
 }
